fixing content overflow
making content overflow properly after addition of instructions in contentContainer

--- a/alp/style.css
+++ b/alp/style.css
@@ -695,7 +695,7 @@ display: flex;
   font-size: calc(12px + (30 - 8) * ((100vw - 300px) / (1300 - 300)));
   overflow-y: scroll;
   max-width: 100%;
-  max-height: 100%;
+  max-height: calc(100% - (var(--vmin) * 3));
 }
 
 #content-social{
@@ -714,7 +714,7 @@ display: flex;
   display: block;
   bottom: 0;
   opacity: 0.6;
-  font-size: 8px;
+  font-size: var(--vmin);
   font-style: italic;
   position: absolute;
   width: calc(100% - 20px);
@@ -722,7 +722,7 @@ display: flex;
   /* background: lightyellow; */
   /* border-bottom-left-radius: inherit; */
   /* border-bottom-right-radius: inherit; */
-  padding: 10px;
+  padding: var(--vmin);
 }
 
 
